# rust-bitcoin-wallet

./: Cargo.toml  README.md
src/: config.rs  error.rs  lib.rs  wallet.rs
tests/: integration_test.rs
