[package]
name = "bitcoin-wallet"
version = "0.1.0"
authors = ["Steven Roose <steven@stevenroose.org>"]
license = "CC0-1.0"
homepage = "https://github.com/stevenroose/rust-bitcoin-wallet/"
repository = "https://github.com/stevenroose/rust-bitcoin-wallet/"
documentation = "https://docs.rs/bitcoin-wallet/"
description = "A simple in-memory serializable Bitcoin wallet."
keywords = [ "crypto", "bitcoin", "wallet" ]
readme = "README.md"

[lib]
name = "bitcoin_wallet"
path = "src/lib.rs"

[dependencies]
#bitcoin = { version = "0.18", features = [ "use-serde" ] }
bitcoin = { git = "git://github.com/rust-bitcoin/rust-bitcoin.git", branch = "master", features = [ "use-serde" ] }
bitcoin_hashes = { version = "0.3", features = [ "serde" ] }
byteorder = "1.2"
hex = "=0.3.2"
lazy_static = "1.3.0"
rand = "0.3"
secp256k1 = { version = "0.12", features = [ "rand" ] }
serde = { version = "1", features = [ "derive" ] }

bitcoinconsensus = { version = "0.16", optional = true }

[dev-dependencies]
base64 = "0.10.1"
bitcoincore-rpc = "0.6"
hex = "0.3.2"
serde_json = "1"
